# codesight

./: .flake8  .gitignore  .pylintrc  CONDA-SETUP.md  README.md  analyze_step05_results.py  check_step04_jsps.py  codesight.code-workspace  domain_analysis_output.txt  download_dependencies.py  environment.yml  industry_standard_brd_example.md  main.py  pyproject.toml  pytest.ini  setup.cfg  verify_step06_accuracy.py
config/: config.yaml  logging.yaml
docs/: AGENT_PROMPT.md  CODESIGHT_GOAL_AND_REQUIREMENTS.md  CONFIGURATION_PARSER_CODE_MAPPING_ANALYSIS.md  NEXT_STEPS.md  QA_CHECKLIST_AND_RUNBOOK.md  REQUIREMENTS_DERIVATION_SPEC.md  SOURCE_INVENTORY_QUERY_CONFIGURATION_LOOKUP.md  STEP03_OUTPUTS_AND_SEARCH_API.md
docs/old - to be deleted/: CODESIGHT_SPECIFICATION.md  SCHEMA_ATTRIBUTE_MAPPING.md  STEP01_FILE_SYSTEM_ANALYSIS.md  STEP01_UPDATES_TRACKING.md  STEP02_AST_STRUCTURAL_EXTRACTION.md  STEP03_EMBEDDINGS_SEMANTIC_ANALYSIS.md  STEP04_LLM_SEMANTIC_ANALYSIS.md  STEP04_PATTERN_CONFIGURATION_ANALYSIS.md  STEP04_WALKTHROUGH_AND_SCHEMA.md  STEP05_LLM_SEMANTIC_ANALYSIS.md  STEP05_RELATIONSHIP_MAPPING.md  STEP06_RELATIONSHIP_MAPPING.md  STEP07_OUTPUT_GENERATION_VALIDATION.md  TARGET_SCHEMA.md  stp01_otuput.json
lib/: VERSION_INFO.txt
projects/ct-hr-storm/: config-ct-hr-storm.yaml  embedding_config.json
projects/ct-hr-storm-test/: config-ct-hr-storm-test.yaml
projects/ct-hr-storm/desired_output/: application_menus.md  application_menus_data.json  application_menus_matrix.html  application_menus_matrix.md  menu_documentation_strategy.md
projects/ct-hr-storm/desired_output/pages/: my_schedule.html  my_schedule_page.json
projects/test-project/: config-test-project.yaml
scripts/: embedding_repl.py  list_unlinked_routes.py  unlinked_routes_out.txt
src/: fs_tools.py
src/config/: __init__.py  config.py  exceptions.py  loaders.py  project_config.py  providers.py  sections.py  validators.py
src/core/: __init__.py  base_node.py  codesight_flow.py
src/domain/: __init__.py  component.py  config_details.py  embedding_models.py  file_structure.py  java_details.py  jsp_details.py  project_model.py  source_factory.py  source_inventory.py  sql_details.py  step02_output.py
src/embeddings/: __init__.py  embedding_generator.py  faiss_manager.py
src/lex/: __init__.py  encoding_detector.py  file_classifier.py  language_detector.py  syntax_validator.py
src/lex/rules/: __init__.py  java_rules.py  sql_rules.py  web_rules.py
src/llm/: __init__.py  llm_client.py  prompt_manager.py
src/steps/: __init__.py
src/steps/step01/: __init__.py  directory_scanner.py  file_info_statistics.py  framework_detector.py  source_locator.py  step01_filesystem_analyzer.py
src/steps/step01/build_parsers/: __init__.py  ant_parser.py
src/steps/step01/classifiers/: __init__.py  base_classifier.py  fallback_classifier.py  file_classifier.py  java_classifier.py  web_classifier.py
src/steps/step01/models/: __init__.py  classification_models.py
src/steps/step01/utils/: __init__.py  pattern_matcher.py
src/steps/step02/: __init__.py  ast_parser_manager.py  jpype_manager.py  source_inventory_query.py  source_inventory_report.py  step02_ast_extractor.py  step02_parser.py
src/steps/step02/parsers/: __init__.py  base_parser.py  base_reader.py  configuration_parser.py  configuration_reader.py  enhanced_ddl_parser.py  enhanced_ddl_tokens.py  java_parser.py  java_reader.py  jboss_service_parser.py  jsp_parser.py  jsp_reader.py  parsetab.py  sql_dialect_detector.py  sql_parser.py  sql_reader.py  sql_statement_analyzer.py  struts1x_parser.py  struts2x_parser.py  tiles_parser.py  validation_parser.py  validator_rules_parser.py  webxml_parser.py
src/steps/step02/utils/: __init__.py  file_inventory_utils.py
src/steps/step03/: step03_embeddings_processor.py
src/steps/step04/: __init__.py  assembly.py  builders.py  evidence.py  handlers.py  jaxrs.py  jsp_classifier.py  linker.py  models.py  plugins.py  rules.py  security.py  step04_pattern_analysis.py  tracer.py  writer.py
src/steps/step05/: assembler.py  models.py  step05_capability_assembly.py  summary.py
src/steps/step06/: models.py  renderer.py  step06_document_assembly.py
src/utils/: file_utils.py  json_utils.py  path_utils.py  threading_utils.py
src/utils/logging/: __init__.py  console_handler.py  file_handler.py  logger_factory.py
src/utils/progress/: __init__.py  batch_tracker.py  progress_manager.py  step_tracker.py
test/: __init__.py
test/steps/: __init__.py
test/steps/step01/: README.md  __init__.py  conftest.py  conftest_pytest.py  pytest.ini  run_tests.py
test/steps/step03/: __init__.py
test/steps/step04/: conftest.py
test/test-config/: __init__.py
tools/: analyze_business_domains.py  copy_route_actions.py  count_types.ps1  ct_hr_storm_step02_probe.ps1  extract_domain_analysis_data.py  extract_invokes.py  head_tail.ps1  jsp_categorization_analysis.py  jsp_count_analysis.py  jsp_reality_check.py  menu_navigation_analysis.py  step04_jsp_differentiation_analysis.py  step04_summarize.py
